[package]
name = "hibachi"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.1"
egui-modal = "0.5.0"
egui_extras = { version = "0.29.1", features = ["image", "file"] }
tinyfiledialogs = "3.9.1"
